# mira-v1-periphery

./: .gitignore  Cargo.toml  Forc.toml  README.md
.github/actions/initialize/: action.yaml
fixtures/mira-amm/: mira_amm_contract-abi.json
fixtures/mock-token/: mock_token-abi.json
libraries/interfaces/src/: mira_amm.sw
libraries/math/: Forc.toml
libraries/math/src/: lib.sw  pool_math.sw  utils.sw
libraries/utils/: Forc.toml
libraries/utils/src/: blockchain_utils.sw
scripts/add_liquidity_script/src/: main.sw
scripts/add_liquidity_script/tests/cases/: success.rs
scripts/add_liquidity_script/tests/utils/: mod.rs
scripts/create_pool_and_add_liquidity_script/src/: main.sw
scripts/get_amount_out_script/: Cargo.toml  Forc.toml
scripts/get_amount_out_script/src/: main.sw
scripts/get_amounts_out_script/: Cargo.toml  Forc.toml
scripts/get_amounts_out_script/src/: main.sw
scripts/remove_liquidity_script/src/: main.sw
scripts/remove_liquidity_script/tests/cases/: revert.rs  success.rs
scripts/remove_liquidity_script/tests/utils/: mod.rs
scripts/swap_exact_input_script/src/: main.sw
scripts/swap_exact_input_script/tests/cases/: success.rs
scripts/swap_exact_input_script/tests/utils/: mod.rs
scripts/swap_exact_output_script/src/: main.sw
scripts/swap_exact_output_script/tests/utils/: mod.rs
test-harness/src/: data_structures.rs  interface.rs  paths.rs  setup.rs  utils.rs
tools/: fetch_abis.sh
